# bumpit

./: .gitignore  Cargo.toml
src/: chart.rs  guitarplaythrough.rs  main.rs
